--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,6 @@
-looging.file.name=application.log
+spring.profiles.active=dev
 
-logging.level.root=WARN
-logging.level.org.springframework.web=WARN
-logging.level.org.hibernate=ERROR
-logging.level.com.naman=DEBUG
-
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
-
-
+environment=COMMON
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3307/address_book_service?useSSL=false
 spring.datasource.username=root
